--- a/download/manifest.plist
+++ b/download/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/Sizuha/test/download/gngs-app.ipa</string>
+					<string>https://sizuha.github.io/test/download/gngs-app.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://github.com/Sizuha/test/icon-1024.png</string>
+					<string>https://sizuha.github.io/test/icon-1024.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://github.com/Sizuha/test/icon-1024.png</string>
+					<string>https://sizuha.github.io/test/icon-1024.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
