--- a/download/manifest.plist
+++ b/download/manifest.plist
@@ -11,15 +11,15 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://sizuha.github.io/test/download/SmartBeta.ipa</string>
+					<string>https://sizuha.github.io/test/download/HBSSample.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.install.english.smarteng.beta</string>
+				<string>jp.co.hbs.LoggerApp</string>
 				<key>bundle-version</key>
-				<string>1.133</string>
+				<string>1.0</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
