タイトル変更

--- a/download/manifest.plist
+++ b/download/manifest.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>GNGS</string>
+				<string>IPAインストールのテスト</string>
 			</dict>
 		</dict>
 	</array>
